git HEAD

    * Fix warnings when encountering unplanned (fchg-only) trains without
      arrival or departure platform
    * db-iris: add -V / --track-via option to display departure at start
      and expected arrival at a destination station
    * db-iris: Add -r / --realtime option to compute times using delay
      data

Travel::Status::DE::IRIS 0.01 - Fri Jan 24 2014

    * Initial release. Experimental, API may change without notice